fixes double scroll issue in lists

--- a/src/app/shared/domain/dishes-list/dishes-list.component.scss
+++ b/src/app/shared/domain/dishes-list/dishes-list.component.scss
@@ -1,5 +1,11 @@
 @import "main";
 
+:host {
+  display: block;
+  height: 100%;
+  overflow: auto;
+}
+
 .app-section__content {
   padding: unset;
 }
