--- a/src/app/shared/domain/meals-list/meals-list.component.scss
+++ b/src/app/shared/domain/meals-list/meals-list.component.scss
@@ -1,5 +1,11 @@
 @import "main";
 
+:host {
+  display: block;
+  height: 100%;
+  overflow: auto;
+}
+
 li:not(:last-of-type) {
   margin-bottom: spacing(8);
   flex-shrink: 0;
