--- a/src/app/shared/generic/tabset/tabset.component.scss
+++ b/src/app/shared/generic/tabset/tabset.component.scss
@@ -1,11 +1,15 @@
 @import 'main';
 
 :host {
-  display: block;
+  display: grid;
+  grid-template-rows:
+    [tabs] max-content
+    [content] 1fr;
   height: 100%;
 }
 
 .tabs {
+  grid-row: tabs;
   display: flex;
   justify-content: center;
   max-height: 100%;
@@ -40,6 +44,7 @@
 }
 
 .content {
+  grid-row: content;
   padding: spacing(8) spacing(16) spacing(16);
   overflow: auto;
 }
